# mooslib

./: CMakeLists.txt  README.md  mooslib.h
include/: mooslib.h
include/moos/: aabb.h  color.h  core.h  material.h  matrix.h  quaternion.h  random.h  spd.h  transform.h  vector.h
mooslib/: color.h  core.h  math.h  matrix.h  quaternion.h  random.h  spd.h  transform.h  vector.h
tests/: CMakeLists.txt  basic_usage.cpp
